# sinistral-action

./: .pre-commit-config.yaml  LICENSE  README.md  action.yml  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
scripts/: run_sinistral_scans.py
tests/: test_run_sinistral_scans.py
